tests/negative/test_expr_bin_bad_types.orb
fnc main() () {
    sym (x:i32 1);
    sym (a:c8 'a');
    + x a;
};